# hass-truenas

./: .pre-commit-config.yaml  .ruff.toml  CLAUDE.md  README.md  hacs.json  pyproject.toml  requirements-dev.txt
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  delete-merged-branch-config.yml  issue_label_bot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: check-lint.yml  dependbot-auto-approve.yml  release.yml
custom_components/truenas/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  entity.py  helpers.py  manifest.json  sensor.py  service.py  services.yaml  strings.json  switch.py  update.py
custom_components/truenas/translations/: en.json  es.json  fr.json  pt_BR.json  ru.json  sk.json
tests/: conftest.py  const.py  test_binary_sensor.py  test_button.py  test_config_flow.py  test_coordinator.py  test_sensor.py  test_service.py  test_switch.py  test_update.py
tests/fixtures/: events.json  truenas.json
