[project]
name = "hass-truenas"
version = "1.2.2"
description = "TrueNAS integration for Home Assistant"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12.0"
authors = [{ name = "cyr-ius", email = "cyr-ius@ipocus.net" }]
keywords = ["home-assistant", "homeassistant", "hacs", "truenas"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["truenaspy==1.0.3"]

[project.urls]
Homepage = "https://github.com/cyr-ius/hass-truenas"
Documentation = "https://github.com/cyr-ius/hass-truenas"
Repository = "https://github.com/cyr-ius/hass-truenas"
"Bug Tracker" = "https://github.com/cyr-ius/hass-truenas/issues"

[dependency-groups]
dev = [
    "truenaspy",
    "pytest",
    "pytest-homeassistant-custom-component",
    "async-upnp-client",
    "ruff",
]

[tool.setuptools]
packages = []

[tool.ruff]
target-version = "py313"
line-length = 88
indent-width = 4
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
ignore = ["E402"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --cov=custom_components --cov-report=term-missing --cov-fail-under=85"
pythonpath = ["."]
testpaths = ["tests/"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
log_cli = true
